--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
       docker_images:
         description: '请填写docker镜像名称 多个用英文逗号分开'
         required: true
-        default: 'jaegertracing/jaeger-query:1.42'  # 设置默认的 Docker 镜像列表
+        default: 'jaegertracing/jaeger-query:1.42,jaegertracing/jaeger-collector:1.42,jaegertracing/jaeger-remote-storage:1.42'  # 设置默认的 Docker 镜像列表
 
 jobs:
   pull_and_package:
